--- a/app/src/main/res/layout/nav_bar.xml
+++ b/app/src/main/res/layout/nav_bar.xml
@@ -19,7 +19,7 @@ android:layout_marginTop="15dp"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_centerInParent="true"
-    android:text="san pham tuyet voi"
+    android:text="Product detail"
     android:textAlignment="center"
     android:textSize="20dp"/>
 
