--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -32,7 +32,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="30dp"
-            android:text="amdin@gmail.com"
+            android:text="Phone: 0989999999"
             android:layout_toRightOf="@id/imageView"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:layout_marginTop="8dp"/>
